# mpc-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: README.md
src/themis_mpc/: __init__.py  admm_qp.py  centroidal_mpc.py  contact_schedule.py  jax_pimpc.py  loco_manip_mpc.py  pimpc.py
src/themis_training/: __init__.py  env_cfgs.py  finetune.py  mpc_grf_mdp.py  phase_mdp.py  push_box_mdp.py  rl_cfg.py
src/themis_training/themis/: __init__.py  themis_constants.py
src/themis_training/themis/xmls/: themis_29dof.xml
src/themis_training/themis/xmls/meshes/: ELBOW_L_rot.STL  ELBOW_R_rot.STL  FEMUR_L_rot.STL  FEMUR_R_rot.STL  FOOT_R_rot2.STL  FOREARM_L_rot.STL  FOREARM_R_rot.STL  HEAD_rot.STL  LOWERSHOULDER_L_rot.STL  LOWERSHOULDER_R_rot.STL  LOWERWRIST_R_ball.STL  TIBIA_R_rot.STL  UPPERARM_L_rot.STL  UPPERARM_R_rot.STL  UPPERSHOULDER_L_rot.STL  UPPERSHOULDER_R_rot.STL  UPPERWRIST_L_rot.STL  UPPERWRIST_R_rot.STL
