[project]
name = "themis_training"
version = "0.1.0"
description = "MPC-guided RL locomotion and loco-manipulation for the Westwood Robotics THEMIS TH02-A7 humanoid in mjlab"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Pinned to the version the reference runs were trained against; later
    # mjlab releases changed several APIs the env/robot configs rely on.
    "mjlab==1.2.0",
    # mjlab 1.2.0's tested simulation stack. Left to float, uv pulls newer
    # mujoco / warp releases whose APIs are incompatible with mjlab 1.2.0
    # (e.g. warp-lang >=1.14 removed ``wp.context`` that mjlab's sim uses).
    "mujoco==3.6.0",
    "mujoco-warp==3.6.0",
    "warp-lang==1.12.0",
    "torch==2.10.0",
    "scipy>=1.15.3",
    # JAX PiMPC solver backend (GPU). Coexists with the PyTorch stack pulled in
    # by mjlab; see centroidal_mpc.py for the XLA memory-fraction settings that
    # keep JAX and torch sharing one GPU.
    "jax[cuda12]==0.10.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
indent-width = 2
src = ["themis_training", "themis_mpc"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

# mjlab discovers training tasks through this entry point: importing the
# `themis_training` package runs its __init__.py, which registers the two
# MPC-guided tasks with the mjlab task registry.
[project.entry-points."mjlab.tasks"]
themis_training = "themis_training"

[project.scripts]
finetune = "themis_training.finetune:main"
